<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView"
        android:textSize="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/welcome_message"
        />



    <Button
        android:id="@+id/button1"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:text="@string/Button1" />


    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_toRightOf="@id/button1"
        android:checked="false"
        android:text="@string/Button2" />

    <ImageButton
        android:id="@+id/image"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button1"
        android:src="@drawable/flag"
        />


    <Switch
        android:id="@+id/switchbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button1"
        android:layout_toRightOf="@id/image"
        android:text="@string/Button4" />


    <EditText
        android:id="@+id/input"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:hint="@string/Hint"
        android:text="@string/Button5" />
</RelativeLayout>