<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--   <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_cont>
     <ListView
               android:id="@+id/theList"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
           <TextView
               android:textSize="25dp"
               android:orientation="horizontal"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/Yourprofile"
               />
       </LinearLayout>-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="25dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Yourname"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/enterName"
            android:textSize="30dp"
            android:orientation="horizontal"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType=""
            android:hint= "@string/Enteryourname"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView

            android:textSize="20dp"
            android:orientation="horizontal"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Youremail" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/emailEdit"
            android:textSize="30dp"
            android:orientation="horizontal"

            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Enteryouremail" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView

            android:textSize="25dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Yourpicture" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/photoButton"
            android:src="@android:drawable/picture_frame"
            android:background="@color/colorGrey"
            android:textAlignment="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/picture" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView

            android:textSize="20dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Click" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/chattingButton"
            android:src="@android:drawable/picture_frame"
            android:textAlignment="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Chat" />
    </LinearLayout>
</LinearLayout>

