<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Send"
        android:id="@+id/sendButton"
        android:layout_alignParentBottom="true"
    />

    <EditText
        android:id="@+id/messageEnter"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/sendButton"
        android:hint="@string/MessageHint" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Recieve"
        android:id="@+id/recieveButton"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/messageEnter"
        />
</RelativeLayout>